# procelio-translation

./: .gitignore  Cargo.toml  README.md  auto_translate.py  build_language_pack.py
docs/: localization.md
files/: _enum.cs  config.json  entries.txt  shared_style.json
files/ENGLISH/: language.json
files/GERMAN/: glossary.json  language.json  style.json  translation_cache.json
files/PIRATESPEAK/: language.json  style.json
src/: bin.rs  lib.rs
src/json/: localization.rs  mod.rs  translation.rs
src/tools/: create.rs  generate.rs  localizer.rs  mod.rs  utils.rs  validate.rs
templates/: glossary.json
