[package]
name = "procelio-localization"
version = "0.1.0"
authors = ["Brennan Stein <brennan.stein@outlook.com>"]
edition = "2018"

[lib]
name = "localizationlib"
path = "src/lib.rs"

[[bin]]
name = "localizationbin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"
regex = "1.3.9"
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0"
image = "0.23.5"