[package]
name = "procelio-translation"
version = "0.1.0"
authors = ["Brennan Stein"]
edition = "2018"

[lib]
name = "translationlib"
path = "src/lib.rs"

[[bin]]
name = "translationtool"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0"
image = "0.23.5"
